--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "Rishav Bharti",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "moment": "^2.29.1",
+    "mongoose": "^5.11.8",
     "nodemon": "^2.0.6"
   }
 }
